// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test de GifExpertApp Match con el snapshot 1`] = `
<Fragment>
  <h2>
    Top 10 gifs
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Test de GifExpertApp debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    Top 10 gifs
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </ol>
</Fragment>
`;
